# rust-norion

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  ROADMAP.md  VERSION_LEDGER.md  build.rs
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark-evidence.yml  bug_report.md  feature_request.md  implementation.yml  research-spike.yml  safety-review.yml
.github/workflows/: community-outreach-reminder.yml  community-outreach-validation.yml  mirror-gitee.yml  pr-validation.yml  publication-update.yml
crates/norion-agent/: Cargo.toml
crates/norion-cli/: Cargo.toml
crates/norion-core/: Cargo.toml
crates/norion-eval/: Cargo.toml
crates/norion-memory/: Cargo.toml
crates/norion-service/: Cargo.toml
crates/norion-test/: Cargo.toml
docs/: apple-model-pool-cn.md  contributor-zone.md  memory-hygiene-cn.md  project-context.md  rustgpt-lab-cn.md
docs/architecture/: cross-window-experience-exchange.md  external-agent-baselines.md  focused-development-strategy.md  integration-gemma-chain.md  integration-gemma-readiness.md  memory-kv-ledger-writer-gates.md  meta-cognitive-evolution-loop.md  no-weight-retrain-policy.md  norion-agent-memory-next-round-evidence.md  norion-agent-workflow.md  norion-agent.md  norion-core-adapter-matrix.md  norion-core-adapters.md  norion-core-failure-return-matrix.md  norion-core.md  norion-eval.md  norion-memory-adapters.md  norion-memory.md  norion-service.md  operator-approval-telemetry.md  pre-reasoning-genome-isa.md  reasoning-genome-chain.md  reasoning-genome-schema.md  router-decision-trace-replay.md  runtime-session-state-api.md  rust-coding-repair-loop.md  (+2 more)
src/: adaptive_state.rs  agent_team.rs  benchmark.rs  clean_room_audit.rs  coding_service_eval.rs  danger_signal.rs  development_pollution.rs  disk_kv.rs  drift.rs  engine.rs  engine_config.rs  evolution_goal.rs  evolution_goal_queue_store.rs  experience.rs  experience_replay.rs  gemma_runtime.rs  gist_memory.rs  hardware.rs  hierarchy.rs  homeostasis.rs  improvement_corpus.rs  inference_runner.rs  infini_memory.rs  kv_cache.rs  kv_exchange.rs  kv_quant.rs  lib.rs  local_runtime.rs  main.rs  memory_admission.rs  no_weight_retrain.rs  path_utils.rs  privacy_redaction.rs  process_reward.rs  production_runtime.rs  reasoning_genome.rs  recursive_scheduler.rs  reference_backlog.rs  reflection.rs  research_deployment.rs  (+20 more)
src/agent_team/: util.rs  (+5 more)
(+1407 files in other folders)
