[package]
name = "rust-norion"
version = "0.306.135"
edition = "2024"
license-file = "LICENSE"

[workspace]
members = [
    ".",
    "crates/norion-agent",
    "crates/norion-cli",
    "crates/norion-core",
    "crates/norion-eval",
    "crates/norion-memory",
    "crates/norion-service",
    "crates/norion-test",
    "tools/model-pool-advice-core",
]
exclude = [
    "tools/evolution-loop",
    "tools/rustgpt-lab",
    "tools/smartsteam-forge",
]
resolver = "3"

[dependencies]
model-pool-advice-core = { path = "tools/model-pool-advice-core" }
norion-agent = { path = "crates/norion-agent" }
norion-cli = { path = "crates/norion-cli" }
norion-core = { path = "crates/norion-core" }
norion-eval = { path = "crates/norion-eval" }
norion-memory = { path = "crates/norion-memory" }
norion-service = { path = "crates/norion-service" }
prost = { version = "0.14.4", optional = true }
sha2 = "0.10"
tokio = { version = "1.52.3", features = ["sync", "rt", "macros", "net"], optional = true }
tokio-stream = { version = "0.1.18", features = ["net"], optional = true }
tonic = { version = "0.14.6", optional = true }
tonic-prost = { version = "0.14.6", optional = true }
tracing = { version = "0.1.44", optional = true }

[features]
default = []
runtime-tonic = [
    "dep:prost",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tonic",
    "dep:tonic-prost",
    "dep:tonic-prost-build",
    "dep:tracing",
]

[build-dependencies]
tonic-prost-build = { version = "0.14.6", optional = true }
